--- a/Data_Modelling/test_model.ipynb
+++ b/Data_Modelling/test_model.ipynb
@@ -151,7 +151,7 @@
        "      <th>listrik</th>\n",
        "      <th>lantai</th>\n",
        "      <th>predicted_price</th>\n",
-       "      <th>selisih_persen</th>\n",
+       "      <th>diff_in_percent</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -352,18 +352,18 @@
        "348      Unfurnished            2            2     1300       1   \n",
        "267      Unfurnished            4            3     3500       2   \n",
        "\n",
-       "     predicted_price selisih_persen  \n",
-       "1340    Rp 1,111,500         25.90%  \n",
-       "1186    Rp 2,464,100        -12.00%  \n",
-       "1367    Rp 4,383,100         -1.93%  \n",
-       "339     Rp 1,724,700        -18.94%  \n",
-       "233     Rp 1,541,300         14.37%  \n",
-       "...              ...            ...  \n",
-       "234     Rp 1,811,700         -0.65%  \n",
-       "1437    Rp 2,726,100          0.87%  \n",
-       "97      Rp 3,081,200         11.97%  \n",
-       "348       Rp 888,400        -30.65%  \n",
-       "267     Rp 3,347,500          7.01%  \n",
+       "     predicted_price diff_in_percent  \n",
+       "1340    Rp 1,111,500          25.90%  \n",
+       "1186    Rp 2,464,100         -12.00%  \n",
+       "1367    Rp 4,383,100          -1.93%  \n",
+       "339     Rp 1,724,700         -18.94%  \n",
+       "233     Rp 1,541,300          14.37%  \n",
+       "...              ...             ...  \n",
+       "234     Rp 1,811,700          -0.65%  \n",
+       "1437    Rp 2,726,100           0.87%  \n",
+       "97      Rp 3,081,200          11.97%  \n",
+       "348       Rp 888,400         -30.65%  \n",
+       "267     Rp 3,347,500           7.01%  \n",
        "\n",
        "[100 rows x 12 columns]"
       ]
@@ -388,7 +388,7 @@
     "data_inference['predicted_price'] = pd.to_numeric(data_inference['predicted_price'], errors='coerce')\n",
     "\n",
     "# Calculate the difference between 'harga' and 'predicted_price' and add it as a new column 'selisih'\n",
-    "data_inference['selisih_persen'] = ((data_inference['harga'] - data_inference['predicted_price']) / data_inference['harga']) * 100\n",
+    "data_inference['diff_in_percent'] = ((data_inference['harga'] - data_inference['predicted_price']) / data_inference['harga']) * 100\n",
     "\n",
     "# Round the predicted_price to the nearest hundreds of thousands\n",
     "data_inference['predicted_price'] = data_inference['predicted_price'].apply(lambda x: round(x, -2))\n",
@@ -396,7 +396,7 @@
     "# Format 'harga', 'predicted_price', and 'selisih_persen' as strings\n",
     "data_inference['harga'] = data_inference['harga'].apply(lambda x: f\"Rp {int(x):,}\")\n",
     "data_inference['predicted_price'] = data_inference['predicted_price'].apply(lambda x: f\"Rp {int(x):,}\")\n",
-    "data_inference['selisih_persen'] = data_inference['selisih_persen'].apply(lambda x: f\"{x:.2f}%\")\n",
+    "data_inference['diff_in_percent'] = data_inference['diff_in_percent'].apply(lambda x: f\"{x:.2f}%\")\n",
     "\n",
     "# Display the inference data with rounded predicted prices\n",
     "print(\"\\nData Inferensi dengan Harga Prediksi:\")\n",
