--- a/Data_Modelling/test_model.ipynb
+++ b/Data_Modelling/test_model.ipynb
@@ -400,8 +400,16 @@
     "\n",
     "# Display the inference data with rounded predicted prices\n",
     "print(\"\\nData Inferensi dengan Harga Prediksi:\")\n",
-    "data_inference\n",
-    "\n"
+    "data_inference"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data_inference.to_csv('../Data_Clean/hasil_prediksi.csv')"
    ]
   }
  ],
